@@ -31,6 +31,7 @@ Specifically, the GPL parts of FFmpeg are
     - vf_decimate.c
     - vf_delogo.c
     - vf_geq.c
+    - vf_histeq.c
     - vf_hqdn3d.c
     - vf_hue.c
     - vf_kerndeint.c
