@@ -41,6 +41,7 @@ FATE_LAVFI = fate-lavfi-alphaextract_rgb                                \
 
 FATE_LAVFI-$(CONFIG_GPL) += fate-lavfi-colormatrix1                     \
                             fate-lavfi-colormatrix2                     \
+                            fate-lavfi-histeq                           \
                             fate-lavfi-hue                              \
                             fate-lavfi-pixfmts_super2xsai               \
                             fate-lavfi-tinterlace_merge                 \
