@@ -1,0 +1,6 @@
+abgr                a538e1221c94a12fb4e60b47b5358f67
+argb                d0ef008d603d67a6a7d698d2a8f53d6a
+bgr24               9ef3c69a658490c4fbc807272372e73a
+bgra                716e70fdf7413d9a3b83e0365c2b0a99
+rgb24               8423322bbc66bc5050f6b93fdab23433
+rgba                a960c9423bbb3925c3511362348b38e2
